--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3151,9 +3151,9 @@ button.swiper-pagination-bullet {
 @media (max-width: 743px) {
     #advantageModal .modal {
         width: 100%;
-        height: 100vh;
+        height: 100%;
         margin-top: 0;
-        padding-bottom: 10rem;
+        padding-bottom: 0rem;
         min-width: 100%;
         overflow: hidden;
         overflow-y: auto;
@@ -3881,15 +3881,15 @@ button.swiper-pagination-bullet {
 }
 
 .menu-bar__title {
-    width: 48.1rem;
-    height: 27.7rem;
+    width: 56rem;
+    height: 26.7rem;
     position: relative;
     margin-top: -7rem;
 }
 
 @media (max-width: 1024px) {
     .menu-bar__title {
-        width: 30rem;
+        width: 40rem;
         height: 18rem;
         margin-top: 0;
     }
