--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3138,6 +3138,7 @@ button.swiper-pagination-bullet {
 
 #advantageModal {
     overflow-y: auto;
+    height: 100vh;
 }
 
 #advantageModal .modal {
@@ -3150,10 +3151,14 @@ button.swiper-pagination-bullet {
 
 @media (max-width: 743px) {
     #advantageModal .modal {
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-direction: column;
+        flex-direction: column;
         width: 100%;
-        height: 100%;
+        height: 80%;
         margin-top: 0;
-        padding-bottom: 0rem;
+        padding-bottom: 5rem;
         min-width: 100%;
         overflow: hidden;
         overflow-y: auto;
