--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2564,6 +2564,14 @@ button.swiper-pagination-bullet {
     object-fit: contain;
 }
 
+@media (max-width: 743px) {
+    .menu-bar__title img {
+        vertical-align: middle;
+        -webkit-transform-origin: 0 0;
+        transform-origin: 0 0;
+    }
+}
+
 @media (max-width: 1024px) {
     .menu-bar__title {
         width: 37rem;
@@ -4370,9 +4378,8 @@ button.swiper-pagination-bullet {
 
 @media (max-width: 743px) {
     .corporate__title img {
+        width: 46rem;
         height: 8.7rem;
-        -webkit-transform: translate(0);
-        transform: translate(0);
     }
 }
 
