--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2566,6 +2566,10 @@ button.swiper-pagination-bullet {
 
 @media (max-width: 743px) {
     .menu-bar__title img {
+        height: 400%;
+        width: 400%;
+        -webkit-transform: scale(0.25);
+        transform: scale(0.25);
         vertical-align: middle;
         -webkit-transform-origin: 0 0;
         transform-origin: 0 0;
@@ -3175,8 +3179,18 @@ button.swiper-pagination-bullet {
 .about__wrap-title img {
     width: 100%;
     height: 100%;
-    -o-object-fit: contain;
-    object-fit: contain;
+}
+
+@media (max-width: 743px) {
+    .about__wrap-title img {
+        height: 400%;
+        width: 400%;
+        -webkit-transform: scale(0.25);
+        transform: scale(0.25);
+        vertical-align: middle;
+        -webkit-transform-origin: 0 0;
+        transform-origin: 0 0;
+    }
 }
 
 .about__grid {
