--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2558,22 +2558,15 @@ button.swiper-pagination-bullet {
 }
 
 .menu-bar__title img {
-    width: 100%;
-    height: 100%;
+    height: 400%;
+    width: 400%;
+    -webkit-transform: scale(0.25);
+    transform: scale(0.25);
+    vertical-align: middle;
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
     -o-object-fit: contain;
     object-fit: contain;
-}
-
-@media (max-width: 743px) {
-    .menu-bar__title img {
-        height: 400%;
-        width: 400%;
-        -webkit-transform: scale(0.25);
-        transform: scale(0.25);
-        vertical-align: middle;
-        -webkit-transform-origin: 0 0;
-        transform-origin: 0 0;
-    }
 }
 
 @media (max-width: 1024px) {
@@ -3177,20 +3170,15 @@ button.swiper-pagination-bullet {
 }
 
 .about__wrap-title img {
-    width: 100%;
-    height: 100%;
-}
-
-@media (max-width: 743px) {
-    .about__wrap-title img {
-        height: 400%;
-        width: 400%;
-        -webkit-transform: scale(0.25);
-        transform: scale(0.25);
-        vertical-align: middle;
-        -webkit-transform-origin: 0 0;
-        transform-origin: 0 0;
-    }
+    height: 400%;
+    width: 400%;
+    -webkit-transform: scale(0.25);
+    transform: scale(0.25);
+    vertical-align: middle;
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    -o-object-fit: contain;
+    object-fit: contain;
 }
 
 .about__grid {
@@ -3505,8 +3493,13 @@ button.swiper-pagination-bullet {
 }
 
 .gallery__title img {
-    width: 100%;
-    height: 100%;
+    height: 400%;
+    width: 400%;
+    -webkit-transform: scale(0.25);
+    transform: scale(0.25);
+    vertical-align: middle;
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
     -o-object-fit: contain;
     object-fit: contain;
 }
@@ -4209,6 +4202,13 @@ button.swiper-pagination-bullet {
 }
 
 .contacts__title img {
+    height: 400%;
+    width: 400%;
+    -webkit-transform: scale(0.25);
+    transform: scale(0.25);
+    vertical-align: middle;
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
     -o-object-fit: contain;
     object-fit: contain;
 }
@@ -4372,9 +4372,7 @@ button.swiper-pagination-bullet {
     object-fit: cover;
 }
 
-.corporate__title img {
-    -o-object-fit: contain;
-    object-fit: contain;
+.corporate__title-img {
     width: 107rem;
     height: 25rem;
     -webkit-transform: translate(-7rem);
@@ -4382,7 +4380,7 @@ button.swiper-pagination-bullet {
 }
 
 @media (max-width: 1024px) {
-    .corporate__title img {
+    .corporate__title-img {
         width: 72rem;
         height: 17rem;
         -webkit-transform: translate(-7rem);
@@ -4391,10 +4389,22 @@ button.swiper-pagination-bullet {
 }
 
 @media (max-width: 743px) {
-    .corporate__title img {
+    .corporate__title-img {
         width: 46rem;
         height: 8.7rem;
     }
+}
+
+.corporate__title-img img {
+    height: 400%;
+    width: 400%;
+    -webkit-transform: scale(0.25);
+    transform: scale(0.25);
+    vertical-align: middle;
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    -o-object-fit: contain;
+    object-fit: contain;
 }
 
 .corporate__title p {
@@ -4861,8 +4871,13 @@ button.swiper-pagination-bullet {
 }
 
 .form-page__title img {
-    width: 100%;
-    height: 100%;
+    height: 400%;
+    width: 400%;
+    -webkit-transform: scale(0.25);
+    transform: scale(0.25);
+    vertical-align: middle;
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
     -o-object-fit: contain;
     object-fit: contain;
 }
