--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,6 +154,7 @@ input,
 textarea {
     outline: none;
     border: none;
+    -webkit-appearance: none;
 }
 
 input::-webkit-outer-spin-button,
@@ -3146,10 +3147,12 @@ button.swiper-pagination-bullet {
 }
 
 .about__wrap-title {
-    width: 50rem;
-    height: 20rem;
-    margin-left: -2.5rem;
+    width: 55rem;
+    height: 25rem;
+    margin-left: -3.5rem;
     margin-bottom: 1rem;
+    margin-top: -3rem;
+    margin-bottom: -1rem;
 }
 
 @media (max-width: 1024px) {
@@ -4375,8 +4378,8 @@ button.swiper-pagination-bullet {
 .corporate__title-img {
     width: 107rem;
     height: 25rem;
-    -webkit-transform: translate(-7rem);
-    transform: translate(-7rem);
+    -webkit-transform: translate(-8rem);
+    transform: translate(-8rem);
 }
 
 @media (max-width: 1024px) {
@@ -4601,12 +4604,12 @@ button.swiper-pagination-bullet {
 }
 
 @media (max-width: 743px) {
-    .terrace-title .corporate__slider-title {
+    .terrace-title.corporate__slider-title {
         width: 100%;
         height: 6rem;
     }
 
-    .terrace-title .corporate__slider-title img {
+    .terrace-title.corporate__slider-title img {
         -o-object-fit: cover;
         object-fit: cover;
     }
