--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1610,6 +1610,13 @@ button.swiper-pagination-bullet {
     padding: 1.8rem 1.4rem;
 }
 
+@media (max-width: 743px) {
+    .modal-form__i-name, .modal-form__i-tel, .modal-form__i-date {
+        padding: 1.6rem 1.4rem;
+        border-radius: 1.1rem;
+    }
+}
+
 .modal-form__i-name.error, .modal-form__i-tel.error, .modal-form__i-date.error {
     border: 0.1rem solid rgb(243, 30, 30);
 }
@@ -1791,7 +1798,7 @@ button.swiper-pagination-bullet {
     color: #333333;
 }
 
-input[type=date] {
+.modal-form__i-date {
   /* Убираем стандартное отображение */
     appearance: none;
     -webkit-appearance: none;
@@ -1799,34 +1806,17 @@ input[type=date] {
     border-radius: 1.1rem;
     padding: 1.7rem;
     padding-left: 4.5rem;
+    height: 5.5rem;
 }
 
 /* Устанавливаем кастомный фон для стрелки */
-input[type=date]::-webkit-calendar-picker-indicator {
+.modal-form__i-date ::-webkit-calendar-picker-indicator {
     background: url("../images/icon/arrow-input.svg");
     background-size: 2rem;
     background-position: center;
     background-repeat: no-repeat;
     width: 1.5rem;
     height: 1.5rem;
-}
-
-.date-input::-webkit-inner-spin-button,
-.date-input::-webkit-calendar-picker-indicator {
-    display: none;
-}
-
-.date-input {
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: textfield;
-    width: 100%;
-    padding: 0.5rem;
-    font-size: 1rem;
-}
-
-.date-input::-webkit-input-placeholder {
-    color: grey;
 }
 
 /*------header-----*/
