--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2408,7 +2408,7 @@ button.swiper-pagination-bullet {
     width: 83%;
     height: 100vh;
     padding-bottom: 0;
-    background: #00312E;
+    background: #05362e;
     transition: all 0.3s;
     -webkit-transform: translate(120%);
     transform: translate(120%);
@@ -2424,6 +2424,7 @@ button.swiper-pagination-bullet {
     align-items: center;
     overflow: hidden;
     overflow-y: auto;
+    position: relative;
 }
 
 @media (max-width: 743px) {
@@ -2581,6 +2582,45 @@ button.swiper-pagination-bullet {
         width: 28rem;
         padding: 1.1rem;
         margin: 1.3rem auto;
+    }
+}
+
+.video-smoke-tab, .video-smoke-mob {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    -o-object-fit: cover;
+    object-fit: cover;
+}
+
+.video-smoke-tab {
+    display: none;
+}
+
+@media (max-width: 1280px) {
+    .video-smoke-tab {
+        display: block;
+    }
+}
+
+@media (max-width: 743px) {
+    .video-smoke-tab {
+        display: none;
+    }
+}
+
+.video-smoke-mob {
+    display: none;
+}
+
+@media (max-width: 743px) {
+    .video-smoke-mob {
+        display: block;
     }
 }
 
