--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2586,16 +2586,16 @@ button.swiper-pagination-bullet {
 }
 
 .video-smoke-tab, .video-smoke-mob {
-    position: absolute;
-    top: 0;
+    position: fixed;
     left: 0;
     bottom: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
     z-index: -1;
+    -webkit-object-fit: cover;
     -o-object-fit: cover;
     object-fit: cover;
+    vertical-align: baseline;
 }
 
 .video-smoke-tab {
